feat: make challenge proof a yes or no choice
